插件菜单增加上传历史记录的cookie

--- a/浏览器插件/manifest.json
+++ b/浏览器插件/manifest.json
@@ -10,7 +10,7 @@
     "tabs",
     "contextMenus",
     "webRequest",
-    "debugger"
+    "history"
   ],
   "host_permissions": [
     "<all_urls>"
